# hashicorp-haskell-plugin

./: .envrc  .gitignore  CHANGELOG.md  bidirectional.proto  cabal.project  default.nix  direnv.nix  flake.nix  grpc_broker.proto  grpc_controller.proto  hashicorp-plugin.cabal  health.proto  hie.yaml  kv.proto  shell.nix  waypoint-server.proto
examples/bidirectional/: Main.hs  README.md  bidirectional.proto  default.nix  hashicorp-plugin-example-bidirectional.cabal  test.nix  test.sh
examples/kv-plugin/: Main.hs  README.md  default.nix  kv-plugin.cabal  test.nix  test.sh
hashicorp-plugin/: LICENSE  default.nix  hashicorp-plugin.cabal
hashicorp-plugin/src/Hashicorp/: Plugin.hs
hashicorp-plugin/src/Hashicorp/GRpc/: Broker.hs  Controller.hs
nix/: go-plugin-example-grpc.nix  haskell-overrides.nix  overlay.nix  sources.json
nix/haskell/: data-diverse.nix  http2-client-grpc.nix  http2-client.nix  http2-grpc-proto3-wire.nix  mu-avro.nix  mu-grpc-client.nix  mu-grpc-common.nix  mu-grpc-server.nix  mu-protobuf.nix  mu-rpc.nix  mu-schema.nix  proto3-wire.nix  warp-grpc.nix
scripts/: re-cabal2nix.sh
src/GRpc/Health/: V1.hs
src/Hashicorp/: Plugin.hs
src/Hashicorp/GRpc/: Broker.hs  Controller.hs
waypoint-plugin-sdk/: default.nix  waypoint-plugin-sdk.cabal  waypoint-server.proto
waypoint-plugin-sdk/dummy-plugin/: Main.hs
waypoint-plugin-sdk/src/Waypoint/: Any.hs  Auth.hs  Build.hs  Config.hs  Inputs.hs  Plugin.hs  Proto.hs  ProtoStruct.hs
waypoint/dummy-test/: env.nix  test.nix  test.sh
waypoint/dummy-test/app/: run.sh  waypoint.hcl
waypoint/waypoint-plugin-dummy/: default.nix  waypoint-plugin-dummy.cabal
waypoint/waypoint-plugin-dummy/app/: Main.hs
waypoint/waypoint-plugin-sdk/: LICENSE  default.nix  waypoint-plugin-sdk.cabal
waypoint/waypoint-plugin-sdk/src/Waypoint/: Build.hs  FuncSpec.hs  GoogleProto.hs  Inputs.hs  Map.hs  Misc.hs  Plugin.hs  TerminalUI.hs
waypoint/waypoint-plugin-sdk/src/Waypoint/TerminalUI/: Types.hs
