cabal-version:       >=1.10
-- Initial package description 'hashicorp-haskell-plugin.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                hashicorp-plugin
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Akshay Mankar
maintainer:          itsakshaymankar@gmail.com
data-files:          health.proto, grpc_broker.proto
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.13 && <5
                     , bytestring >= 0.10
                     , text
                     , unordered-containers
                     , attoparsec
                     , hashable
                     , network
                     , temporary
                     , mu-grpc-server >=0.4
                     , mu-grpc-client >=0.4
                     , mu-rpc >=0.4
                     , mu-protobuf >= 0.4
                     , mu-schema >=0.3.1
                     , warp-grpc >= 0.4.0.1
                     , conduit
                     , stm-conduit
                     , mtl
                     , broadcast-chan
                     , http2-grpc-types
                     , warp
                     , mu-optics
                     , first-class-families >= 0.8
                     , http2-client-grpc
                     , http2-client
                     , stm
                     , data-has
  exposed-modules:     Hashicorp.Plugin
                     , GRpc.Health.V1
                     , Hashicorp.GRpc.Broker