cabal-version:       >=1.10
name:                waypoint-plugin-sdk
version:             0.1.0.0
license-file:        LICENSE
author:              Akshay Mankar
maintainer:          itsakshaymankar@gmail.com
build-type:          Simple

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Waypoint.Any
                     , Waypoint.Auth
                     , Waypoint.Build
                     , Waypoint.Config
                     , Waypoint.FuncSpec
                     , Waypoint.Inputs
                     , Waypoint.Map
                     , Waypoint.Misc
                     , Waypoint.Plugin
                     , Waypoint.Proto
                     , Waypoint.ProtoStruct
  ghc-options:         -Wall
  build-depends:       base >=4.13 && <5
                     , bytestring
                     , containers
                     , hashicorp-plugin
                     , mu-optics
                     , mu-protobuf
                     , mu-rpc
                     , mu-schema
                     , text
                     , unordered-containers

executable waypoint-plugin-dummy
  default-language:    Haskell2010
  hs-source-dirs:      dummy-plugin
  main-is:             Main.hs
  build-depends:       base
                     , hashicorp-plugin
                     , waypoint-plugin-sdk
