cabal-version:       >=1.10
name:                hashicorp-plugin-example-bidirectional
version:             0.1.0.0
data-files:          bidirectional.proto
author:              Akshay Mankar
maintainer:          itsakshaymankar@gmail.com
build-type:          Simple

executable hashicorp-plugin-example-bidirectional
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , hashicorp-plugin
                     , mu-grpc-server == 0.4.0.0
                     , mu-grpc-client >= 0.4
                     , mu-optics
                     , mu-protobuf == 0.4.0.0
                     , mu-rpc == 0.4.0.0
                     , mu-schema == 0.3.1.1
                     , text
                     , unordered-containers
                     , data-has
                     , stm
                     , mtl
  default-language:    Haskell2010
